added images and thumbnails
added images and thumbnails

--- a/drinks.html
+++ b/drinks.html
@@ -36,6 +36,18 @@
     </div>
     </div>
 
+    <div class="container">
+      <img src="Lemonade.jpg" alt="Lemonade" class="img-fluid">
+      <img src="AJ.jpg" alt="Apple Juice" class="img-fluid">
+      <img src="DrPepper.jpg" alt="Dr. Pepper" class="img-fluid">
+    </div>
+
+    <div class="container">
+      <img src="Lemonade.jpg" alt="Lemonade" class="img-thumbnail">
+      <img src="AJ.jpg" alt="Apple Juice" class="img-thumbnail">
+      <img src="DrPepper.jpg" alt="Dr. Pepper" class="img-thumbnail">
+    </div>
+
   <p>The drink names will break first. This is due to the break point being md<br>
     for the names and just sm for the letters.</p>
 
