added table and buttons
added table and buttons

--- a/drinks.html
+++ b/drinks.html
@@ -36,6 +36,9 @@
     </div>
     </div>
 
+    <p>The drink names will break first. This is due to the break point being md<br>
+      for the names and just sm for the letters.</p>
+
     <div class="container">
       <img src="Lemonade.jpg" alt="Lemonade" class="img-fluid">
       <img src="AJ.jpg" alt="Apple Juice" class="img-fluid">
@@ -48,8 +51,74 @@
       <img src="DrPepper.jpg" alt="Dr. Pepper" class="img-thumbnail">
     </div>
 
-  <p>The drink names will break first. This is due to the break point being md<br>
-    for the names and just sm for the letters.</p>
+    <table class="table">
+      <caption>Table of My Letters</caption>
+      <thead class="thead-dark">
+          <tr>
+              <th scope="col">Letter</th>
+              <th scope="col">Drink</th>
+              <th scope="col">Star Name</th>
+              <th scope="col">Fish</th>
+          </tr>
+      </thead>
+      <tbody class="table table-striped table-hover">
+          <tr>
+              <th scope="row">L</th>
+              <td>Lemonade</td>
+              <td>Larry Bird</td>
+              <td>Lobster</td>
+          </tr>
+          <tr>
+              <th scope="row">E</th>
+              <td>Everclear</td>
+              <td>Ed Sheeran</td>
+              <td>Electric Eel</td>
+          </tr>
+          <tr>
+              <th scope="row">W</th>
+              <td>Water</td>
+              <td>William Wallace</td>
+              <td>White Skirt Tetra</td>
+          </tr>
+          <tr>
+              <th scope="row">A</th>
+              <td>Apple Juice</td>
+              <td>Aaron Rodgers</td>
+              <td>Angel Fish</td>
+          </tr>
+          <tr>
+              <th scope="row">N</th>
+              <td>Nesquik</td>
+              <td>Neymar</td>
+              <td>Nandus</td>
+          </tr>
+          <tr>
+              <th scope="row">D</th>
+              <td>Dr. Pepper</td>
+              <td>Dwight Howard</td>
+              <td>Dolphin</td>
+          </tr>
+      </tbody>
+  </table>
+
+  <div class="btn-toolbar" role="toolbar" aria-label="Button Groups">
+  
+    <div class="btn-group" role="group" aria-label="Image Buttons">
+        <button type="button" class="btn btn-success">L</button>
+        <button type="button" class="btn btn-success">A</button>
+        <button type="button" class="btn btn-success">D</button>
+    </div>
+
+    <div class="btn-group" role="group" aria-label="Alert Buttons">
+        <button type="button" class="btn btn-warning">E</button>
+        <button type="button" class="btn btn-warning">W</button>
+    </div>
+
+    <div class="btn-group" role="group" aria-label="Danger Buttons">
+        <button type="button" class="btn btn-danger">N</button>
+    </div>
+</div>
+
 
 </body>
 </html>
